# Feeling-of-Computing

./: .gitignore  README.md  justfile
conversations/: .gitignore  README.md  biome.json  index.html  package-lock.json  package.json
conversations/scripts/: build-emoji.js  build-slack-emoji.js
conversations/src/: app.js  components.js  date.js  emoji-data.js  emoji.js  indexloader.js  slack-emoji-data.js  slack.js
conversations/style/: input.css  style.css
conversations/tests/: indexloader.test.js
foc-server/: Cargo.toml  config.example.toml
foc-server/assets/: app.js  index.html  style.css
foc-server/docs/: systemd.md
foc-server/resources/: foc-server.service
foc-server/scripts/: smoke-test.js
foc-server/src/: assets.rs  config.rs  embedding.rs  error.rs  lib.rs  main.rs  search.rs  server.rs
history/: channels.json  index.json
history/2017/: index.json
history/2017/06/: 13.json  14.json  15.json  15.replies.json  16.json  17.json  21.json  22.json  23.json  24.json  25.json  26.json  30.json  index.json
history/2017/07/: 07.json  09.json  10.json  12.json  23.json  23.replies.json  24.json  25.json  26.json  29.json  31.json  index.json
history/2017/08/: 02.json  03.json  06.json  07.json  07.replies.json  08.json  08.replies.json  09.json  09.replies.json  10.json  10.replies.json  13.json  18.json  18.replies.json  19.json  20.json  26.json  (+7 more)
history/2020/: index.json
history/2026/: index.json
scripts/: download-attachments.js  dump-history.js  history-to-lancedb.js  index-replies.js  package-lock.json  package.json  query-lancedb.js
(+5104 files in other folders)
