[package]
name = "foc-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arrow-array = "57.3.0"
arrow-json = "57.3.0"
arrow-schema = "57.3.0"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
lance-index = "4.0.0"
rust-embed = "8.7.2"
mime_guess = "2.0.5"
lancedb = { version = "0.27.2", features = ["sentence-transformers"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
tower = { version = "0.5.3", features = ["limit"] }
tower-http = { version = "0.6.8", features = ["timeout"] }
tower_governor = "0.8.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unwrap_in_result = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "warn"
